; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_prf.c_putchar_asl.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_subr_prf.c_putchar_asl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.putchar_args = type { i32 }

@TOLOGLOCKED = common dso_local global i32 0, align 4
@aslbufp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @putchar_asl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @putchar_asl(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.putchar_args*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.putchar_args*
  store %struct.putchar_args* %7, %struct.putchar_args** %5, align 8
  %8 = load %struct.putchar_args*, %struct.putchar_args** %5, align 8
  %9 = getelementptr inbounds %struct.putchar_args, %struct.putchar_args* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @TOLOGLOCKED, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %27

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  %19 = icmp ne i32 %18, 13
  br i1 %19, label %20, label %27

20:                                               ; preds = %17
  %21 = load i32, i32* %3, align 4
  %22 = icmp ne i32 %21, 127
  br i1 %22, label %23, label %27

23:                                               ; preds = %20
  %24 = load i32, i32* @aslbufp, align 4
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @log_putc_locked(i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %20, %17, %14, %2
  %28 = load i32, i32* %3, align 4
  %29 = load i8*, i8** %4, align 8
  %30 = call i32 @putchar(i32 %28, i8* %29)
  ret void
}

declare dso_local i32 @log_putc_locked(i32, i32) #1

declare dso_local i32 @putchar(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
